[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Elements.tres" type="TileSet" id=2]
[ext_resource path="res://levels/board1.png" type="Texture" id=3]
[ext_resource path="res://levels/error.mp3" type="AudioStream" id=4]
[ext_resource path="res://Level21.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.7404, 36.6964 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.25, 28 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="Board1" type="Sprite" parent="."]
position = Vector2( 180, 180 )
scale = Vector2( 0.330808, 0.331267 )
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 20, 20 )
cell_custom_transform = Transform2D( 20, 0, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( -65538, 10, 0, -65537, 10, 0, -131072, 10, 0, -131071, 10, 0, -131070, 10, 0, -131069, 10, 0, -131068, 10, 0, -131067, 10, 0, -131066, 10, 0, -131065, 10, 0, -131064, 10, 0, -131063, 10, 0, -131062, 10, 0, -131061, 10, 0, -131060, 10, 0, -131059, 10, 0, -131058, 10, 0, -131057, 10, 0, -131056, 10, 0, -131055, 10, 0, -131054, 10, 0, -131053, 10, 0, -2, 10, 0, -65517, 10, 0, 65534, 10, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 19, 10, 0, 131070, 10, 0, 65536, 10, 0, 65537, 1, 0, 65538, 5, 0, 65539, 1, 0, 65540, 10, 0, 65555, 10, 0, 196606, 10, 0, 131072, 10, 0, 131073, 1, 0, 131075, 1, 0, 131076, 10, 0, 131091, 10, 0, 262142, 10, 0, 196608, 10, 0, 196609, 1, 0, 196611, 1, 0, 196612, 10, 0, 196627, 10, 0, 327678, 10, 0, 262144, 10, 0, 262145, 1, 0, 262147, 1, 0, 262148, 10, 0, 262149, 10, 0, 262150, 10, 0, 262151, 10, 0, 262152, 10, 0, 262153, 10, 0, 262154, 10, 0, 262155, 10, 0, 262156, 10, 0, 262157, 10, 0, 262158, 10, 0, 262159, 10, 0, 262160, 10, 0, 262161, 10, 0, 262163, 10, 0, 393214, 10, 0, 327680, 10, 0, 327681, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 10, 0, 327699, 10, 0, 458750, 10, 0, 393216, 10, 0, 393217, 1, 0, 393221, 3, 0, 393229, 3, 0, 393233, 10, 0, 393235, 10, 0, 524286, 10, 0, 458752, 10, 0, 458753, 1, 0, 458757, 3, 0, 458765, 3, 0, 458769, 10, 0, 458771, 10, 0, 589822, 10, 0, 524288, 10, 0, 524289, 1, 0, 524293, 3, 0, 524301, 3, 0, 524305, 10, 0, 524307, 10, 0, 655358, 10, 0, 589824, 10, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589841, 10, 0, 589843, 10, 0, 720894, 10, 0, 655360, 10, 0, 655365, 3, 0, 655373, 3, 0, 655377, 10, 0, 655379, 10, 0, 786430, 10, 0, 720896, 10, 0, 720901, 3, 0, 720909, 3, 0, 720913, 10, 0, 720915, 10, 0, 851966, 10, 0, 786432, 10, 0, 786437, 3, 0, 786445, 3, 0, 786449, 10, 0, 786451, 10, 0, 917502, 10, 0, 851968, 10, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 10, 0, 851987, 10, 0, 983038, 10, 0, 917504, 10, 0, 917509, 3, 0, 917517, 3, 0, 917521, 10, 0, 917523, 10, 0, 1048574, 10, 0, 983040, 10, 0, 983045, 3, 0, 983053, 3, 0, 983056, 10, 0, 983057, 10, 0, 983059, 10, 0, 1114110, 10, 0, 1048576, 10, 0, 1048581, 3, 0, 1048589, 3, 0, 1048592, 9, 0, 1048593, 10, 0, 1048595, 10, 0, 1179646, 10, 0, 1114112, 10, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 10, 0, 1114128, 10, 0, 1114129, 10, 0, 1114131, 10, 0, 1245182, 10, 0, 1179667, 10, 0, 1310718, 10, 0, 1310719, 10, 0, 1245184, 10, 0, 1245185, 10, 0, 1245186, 10, 0, 1245187, 10, 0, 1245188, 10, 0, 1245189, 10, 0, 1245190, 10, 0, 1245191, 10, 0, 1245192, 10, 0, 1245193, 10, 0, 1245194, 10, 0, 1245195, 10, 0, 1245196, 10, 0, 1245197, 10, 0, 1245198, 10, 0, 1245199, 10, 0, 1245200, 10, 0, 1245201, 10, 0, 1245202, 10, 0, 1245203, 10, 0, 11665566, 5, 0 )

[node name="Camera2D" type="Camera2D" parent="TileMap"]
position = Vector2( 180, 180 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 332, 332 )

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 180, 180 )
scale = Vector2( 0.330808, 0.331267 )

[node name="Exit" type="CollisionShape2D" parent="Exit"]
position = Vector2( -386.931, -446.77 )
shape = SubResource( 1 )

[node name="Damage" type="Area2D" parent="."]

[node name="Damage" type="CollisionShape2D" parent="Damage"]
position = Vector2( 152, 192 )
shape = SubResource( 2 )

[node name="Damage2" type="CollisionShape2D" parent="Damage"]
position = Vector2( 212, 112 )
shape = SubResource( 2 )

[node name="Damage3" type="CollisionShape2D" parent="Damage"]
position = Vector2( 212, 272 )
shape = SubResource( 2 )

[node name="Damage4" type="CollisionShape2D" parent="Damage"]
position = Vector2( 172, 352 )
shape = SubResource( 2 )

[node name="Damage5" type="CollisionShape2D" parent="Damage"]
position = Vector2( 55, 352 )
shape = SubResource( 2 )

[node name="Damage6" type="CollisionShape2D" parent="Damage"]
position = Vector2( 32, 63 )
rotation = -1.57079
shape = SubResource( 2 )

[node name="Damage7" type="CollisionShape2D" parent="Damage"]
position = Vector2( 72, -8 )
rotation = -1.57079
shape = SubResource( 2 )

[node name="Screen" type="Area2D" parent="."]

[node name="Screen" type="CollisionShape2D" parent="Screen"]
position = Vector2( 112, 312 )
shape = SubResource( 3 )

[node name="Screen2" type="CollisionShape2D" parent="Screen"]
position = Vector2( 272, 232 )
shape = SubResource( 3 )

[node name="Screen2" type="Area2D" parent="."]

[node name="Screen" type="CollisionShape2D" parent="Screen2"]
position = Vector2( 271.75, 312 )
shape = SubResource( 3 )

[node name="Screen3" type="Area2D" parent="."]

[node name="Screen" type="CollisionShape2D" parent="Screen3"]
position = Vector2( 112, 232 )
shape = SubResource( 3 )

[node name="Screen4" type="Area2D" parent="."]

[node name="Screen" type="CollisionShape2D" parent="Screen4"]
position = Vector2( 272, 152 )
shape = SubResource( 3 )

[node name="Screen5" type="Area2D" parent="."]
position = Vector2( -160, 0 )

[node name="Screen" type="CollisionShape2D" parent="Screen5"]
position = Vector2( 272, 152 )
shape = SubResource( 3 )

[node name="erroraudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -22.0
pitch_scale = 0.3
autoplay = true

[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
[connection signal="body_entered" from="Screen" to="." method="_on_Screen_body_entered"]
[connection signal="body_entered" from="Screen2" to="." method="_on_Screen2_body_entered"]
[connection signal="body_entered" from="Screen3" to="." method="_on_Screen3_body_entered"]
[connection signal="body_entered" from="Screen4" to="." method="_on_Screen4_body_entered"]
[connection signal="body_entered" from="Screen5" to="." method="_on_Screen5_body_entered"]
